Add stuff to FD tab for now and convert cherry to plum